fixed the spacing issue with the sign up username

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -266,10 +266,11 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 .flash-div > p {
     font-family: "Montserrat";
-    color: #DBC8CA;
+    color: rgba(201, 77, 77, 0.938);
     font-size: 20px;
 }
 .user-div {
